# otus3

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  MyAllocator.h  MyContainer.h  allocator.cpp
